# uoh-sqak-ex01

./: .env-example  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  uoh-sqak-ex01.docx
config/: logging_config.json  rate_limits.json  setup.json
docs/: PLAN.md  PRD.md  PRD_dataset.md  PRD_evaluation.md  PRD_fc_model.md  PRD_lstm_model.md  PRD_rnn_model.md  PRD_training_loop.md  PROMPTS.md  SUBMISSION_CHECKLIST.md  TODO.md
docs/ADRs/: ADR-001-pytorch.md  ADR-002-uniform-amplitude-noise.md  ADR-003-concat-c-every-timestep.md  ADR-004-adam-default.md  ADR-005-model-registry.md  ADR-006-json-config.md  ADR-007-multi-seed.md  ADR-008-cpu-budget.md  ADR-009-persistence-formats.md  ADR-010-lifecycle-hooks.md
docs/diagrams/: c4_container.md  c4_context.md  sequence_train.md
notebooks/: analysis.ipynb
results/: experiment_matrix.csv  hypothesis_test.json  run_log.txt  sensitivity.csv
scripts/: check_file_lines.py  fill_submission_pdf.py  mark_todo_done.py  preflight_submission.py  regenerate_plots.py
src/sinusoid_extractor/: __init__.py  constants.py  main.py
src/sinusoid_extractor/models/: __init__.py  base_extractor.py  fc_model.py  lstm_model.py  mixins.py  registry.py  rnn_model.py
src/sinusoid_extractor/sdk/: __init__.py  sdk.py
src/sinusoid_extractor/services/: __init__.py  data_bundle.py  dataset_service.py  early_stopping.py  evaluation_service.py  loss_fn.py  metrics.py  noise_model.py  optimizer_factory.py  plotting.py  signal_generator.py  splitter.py  sweep_service.py  torch_dataset.py  training_loop.py  training_service.py  windower.py
src/sinusoid_extractor/shared/: __init__.py  config.py  gatekeeper.py  hooks.py  logger.py  persistence.py  queue_manager.py  version.py
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_config.py  test_constants.py  test_data_bundle.py  test_dataset_service.py  test_early_stopping.py  test_fc_model.py  test_gatekeeper.py  test_hooks.py  test_logger.py  test_loss_fn.py  test_lstm_model.py  test_main_cli.py  test_metrics.py  test_mixins.py  test_noise_model.py  test_optimizer_factory.py  test_persistence.py  test_queue_manager.py  test_registry.py  test_rnn_model.py  test_signal_generator.py  test_splitter.py  test_torch_dataset.py  test_training_loop.py  test_version.py  test_windower.py
