[project]
name = "sinusoid-extractor"
version = "1.09"
description = "FC vs RNN vs LSTM for extracting a chosen pure sine from a noisy 4-sine mixture (HW1, Course 203.3763, University of Haifa)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Salah Qadah", email = "sqadah02@campus.haifa.ac.il" },
]
keywords = ["pytorch", "rnn", "lstm", "signal-processing", "sinusoid", "university-of-haifa"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pandas>=2.0",
    "python-dotenv>=1.0",
    "scipy>=1.15.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.6",
    "ipykernel>=6.29",
    "jupyter>=1.0",
    "nbconvert>=7.16",
]

[project.scripts]
sinusoid-extractor = "sinusoid_extractor.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sinusoid_extractor"]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.6",
    "ipykernel>=6.29",
    "jupyter>=1.0",
    "nbconvert>=7.16",
    "python-docx>=1.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
extend-exclude = ["data", "results", "logs", "notebooks/.ipynb_checkpoints"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B008", "N802", "N806"]
"src/sinusoid_extractor/__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-q",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration (slower)",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/sinusoid_extractor/main.py",
    "*/tests/*",
    "src/sinusoid_extractor/services/plotting.py",
]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
